# skipper

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md
.claude/commands/: build-plugin.md
.claude/rules/: architecture.md  audio-thread.md  build-commands.md  common-issues.md  debugging.md  java-conventions.md  music-workflow.md
docs/: BITWIG-DEVELOPMENT.md  DJ.md  UNDERSTANDING-BITWIG-DEVELOPMENT.md  architecture.excalidraw
gilligan/: dependency-reduced-pom.xml  pom.xml
programs/: README.md
songs/: SONG-LIST.md
songs/90s-boom-bap/: Bass.json  Guitar.json  Kick.json  Piano.json  Snare.json  Violin.json
songs/afrobeat/: Bass.json  Guitar.json  Kick.json  Piano.json  Snare.json  Violin.json
songs/bebop-jazz/: Bass.json  Guitar.json  Kick.json  Piano.json  Snare.json  Violin.json
songs/big-band-swing/: Bass.json  Guitar.json  Kick.json  Piano.json  Snare.json  Violin.json
songs/bittersweet-violin/: Bass.json  Guitar.json  Kick.json  Piano.json  Snare.json  Violin.json
songs/bossa-nova/: Bass.json  Guitar.json  Kick.json  Piano.json  Snare.json  Violin.json
songs/chicago-blues/: Bass.json  Guitar.json  Kick.json  Piano.json  Snare.json  Violin.json
songs/classical-mozart/: Bass.json  Guitar.json  Kick.json  Piano.json  Snare.json  Violin.json
songs/deep-house/: Bass.json  Guitar.json  Kick.json  Piano.json  Snare.json  Violin.json
songs/disco-fever/: Bass.json  Guitar.json  Kick.json  Piano.json  Snare.json  Violin.json
songs/honky-tonk-country/: Bass.json  Guitar.json  Kick.json  Piano.json  Snare.json  Violin.json
src/: lib.rs
tests/: clap_track_info.rs
tools/: dj.sh  gilligan.py  validate_program.py
xtask/: Cargo.toml
xtask/src/: main.rs
(+70 files in other folders)
