[package]
name = "skipper"
version = "0.6.0"
edition = "2021"
authors = ["Brian Edwards <brian.mabry.edwards@gmail.com>"]
license = "AGPL-3.0"
description = "A CLAP plugin that displays host and track information"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
nih_plug = { path = "nih-plug", features = ["assert_process_allocs"] }
nih_plug_egui = { path = "nih-plug/nih_plug_egui" }
atomic_refcell = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.9"

[dev-dependencies]
clap-sys = { git = "https://github.com/micahrj/clap-sys.git", rev = "25d7f53fdb6363ad63fbd80049cb7a42a97ac156" }
libloading = "0.8"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[workspace]
members = ["xtask"]
exclude = ["nih-plug"]
